<resources>
    <string name="app_name">Pith</string>

    <string name="dialog_loading">数据加载中</string>

    <string name="register_text">注册账号</string>

    <string name="input_user_name">请输入账号名</string>

    <string name="input_phone_num_for_login">请输入手机号</string>

    <string name="input_phone_num_for_register">请输入手机号（无需验证）</string>

    <string name="input_password">请输入密码</string>

    <string name="repeat_input_password">请确认密码</string>

    <string name="forget_password">忘记密码</string>

    <string name="confirm_login">登陆</string>

    <string name="confirm_register">注册</string>

    <string name="login_direct">已有账号？直接登录</string>

    <string name="modify_password">修改密码</string>

    <string name="take_photo_failed">启动拍照失败</string>

    <string name="crop_photo_failed">裁剪图片失败</string>

    <string name="open_gallery_failed">打开相册失败</string>

    <string name="illegal_user_name">不合规范的用户名</string>

    <string name="illegal_password">不合规范的密码</string>

    <string name="myself_str">我</string>

</resources>
