<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.dualvector.pith.mvp.ui.widget.PersonalCenterHeadView
        android:id="@+id/login_user_head"
        android:layout_width="@dimen/fragment_head_size"
        android:layout_height="@dimen/fragment_head_size"
        android:background="@mipmap/ic_default_user_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_head_marginTop"/>

    <RelativeLayout
        android:id="@+id/user_info"
        android:layout_width="@dimen/login_fragment_user_info_width"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_user_head"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/fragment_user_info_marginTop">

        <EditText
            android:id="@+id/name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:drawableStart="@mipmap/ic_user_icon"
            android:hint="@string/input_user_name"
            android:textColor="#000000"/>

        <com.dualvector.pith.mvp.ui.widget.PasswordEditText
            android:id="@+id/password_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:layout_below="@+id/name_et"
            android:hint="@string/input_password"
            android:textColor="#000000"
            android:drawableStart="@mipmap/ic_password_icon"
            android:drawableEnd="@mipmap/ic_password_hide_icon"
            android:layout_marginTop="@dimen/login_fragment_input_marginTop"/>

        <TextView
            android:id="@+id/forget_password_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/password_et"
            android:layout_marginTop="@dimen/login_fragment_input_marginTop"
            android:text="@string/forget_password"
            android:textColor="#000000"
            android:layout_alignParentEnd="true"/>

        <Button
            android:id="@+id/confirm_login_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/confirm_login"
            android:layout_marginTop="10dp"
            android:textColor="@color/colorBackground"
            android:layout_below="@+id/forget_password_tv"
            android:background="@drawable/login_btn_selector"/>

    </RelativeLayout>

</RelativeLayout>